spacing fixed

--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -18,6 +18,7 @@
     align-items: center;
     justify-content: center;
 
+
   }
 
   .productDetRight{
@@ -26,7 +27,7 @@
 
   }
   .productimgleft{
-    width: 20%;
+    width: 30%;
 
   }
   .productDetRight{
@@ -43,8 +44,11 @@
     display: flex;
     flex-direction: column;
   }
+  .productInfoName{
+   margin-bottom: 60px;
+  }
 
-  .productInfoName,
+
   .productInfoPrice,
   .productInfoDesc,
   .productInfodet {
@@ -127,5 +131,5 @@
     margin-bottom: 70px;
    position: relative;
    width: 500px;
-   left: 19.5%;
+   left: 20%;
   }
